# 3D_Viewer

./: README.md  README_RUS.md
src/: CMakeLists.txt  Makefile  Manual.texi
src/3DViewer2/: controller.cc  controller.h  main.cc  mainwindow.cc  mainwindow.h  mainwindow.ui  model_renderer.cc  model_renderer.h  record.cc  record.h  settings.h  settings_type.h
src/model/: affine_command.h  affine_invoker.h  data_object.h  exceptions.h  i_model.h  i_parser.h  min_max_values.h  model.cc  model.h  object_info.h  parser.h  parser_factory.h  type_command.h  type_data_object.h
src/tests/: CMakeLists.txt  tests.cc
